# ibmp

./: .envrc  .gitignore  .onedev-buildspec.yml  README.md  TODO.md  design.md  layout.kdl  open  open.sh  package-lock.json  package.json  podman-compose.yaml
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/api/: api.ts
client/src/components/inputText/: inputText.tsx
client/src/features/inventory/: Inventory.tsx
client/src/hooks/: useProductList.ts  useRecipeList.ts
client/src/models/: Product.ts  Recipe.ts
client/src/routes/: +page.svelte
client/src/services/: product.service.ts  recipe.service.ts
db/: .gitignore  docker-compose.yaml  init.sql  schema.dbml  start.sh
lib/: package-lock.json  package.json
scripts/: auth.sh  browser.sh  client.sh  db.sh  insomnia.sh  server.sh
server/: .env  Cargo.toml  Dockerfile
server/migrations/2022-06-15-001745_create_products/: down.sql  up.sql
server/src/: constants.rs  main.rs  schema.rs
server/src/models/: mod.rs
server/src/models/db/: mod.rs  product.rs  recipe.rs
server/src/models/requests/: mod.rs  product_request.rs  recipe_request.rs
server/src/models/responses/: ingredient_response.rs  measurement_response.rs  mod.rs  product_response.rs  recipe_response.rs
server/src/repositories/: mod.rs  product_repository.rs  recipe_repository.rs
server/src/services/: mod.rs  product_service.rs  recipe_service.rs
