[package]
name = "ibmp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "*"
uuid = { version = "0.6", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
diesel = { version = "1.4.8", features = ["postgres"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
dotenv = "0.15.0"